[package]
name = "multiconf"
version = "0.1.3"
edition = "2021"
description = "Easily generate different versions of config files"
license = "GPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "3.0.14", features = ["derive"]}
notify = "4.0.17"